# bsp5

./: .gitignore  README.md  requirements.txt
aegis/: README.md  __init__.py  pyproject.toml  requirements.txt
aegis/agents/: __init__.py  heuristic_impostor.py  heuristic_survivor.py  random_policy.py
aegis/analysis/: __init__.py  aggregate_all_metrics.py  aggregate_metrics.py  analyze_comm_logs.py  analyze_events.py  evaluate_ppo.py  merge_events.py  plot_metrics.py
aegis/comms/: __init__.py  actions.py  router.py  tokens.py  trust.py
aegis/core/: __init__.py  engine.py  events.py  rules.py  world.py
aegis/env/: __init__.py  pettingzoo_env.py  wrappers.py
aegis/logging/: __init__.py  event_writer.py  metrics.py
aegis/obs/: __init__.py  builder.py  spaces.py
aegis/scripts/: aggregate_metrics.py  analyze_comm_logs.py  analyze_events.py  evaluate_ppo.py  merge_events.py  play_heuristic.py  run_experiments.py
aegis/tests/: __init__.py  test_core_invariants.py  test_core_rules.py  test_determinism.py  test_env_contract.py  test_meeting_vote.py  test_reward_shaping.py  test_rllib_config.py  test_vision_mask.py
aegis/train/: __init__.py  rl_ppo.py  rllib_ppo.py  seeds.py
aegis/train/configs/: balanced_rewards.yaml  base.config.yaml  base.yaml  e1_baseline.config.yaml  e2_fov_high.config.yaml  e2_fov_low.config.yaml  e2_trust_only.config.yaml  e3_trust_comm.config.yaml  e4_delay_delayed.config.yaml  e4_delay_immediate.config.yaml  e5_trust_weight_0.config.yaml  e5_trust_weight_high.config.yaml  e5_trust_weight_low.config.yaml  e6_fov_high.config.yaml  (+4 more)
(+6 files in other folders)
